# rag_crm

./: .env.example  .gitignore  pyproject.toml
apps/api/: apps.py  serializers.py  urls.py  views.py
apps/chatbot/: admin.py  apps.py  models.py  pipeline.py  schemas.py  services.py  sms.py
apps/chatbot/migrations/: 0001_initial.py  0002_botpersona_prompttemplate.py  0003_shift_workingday.py  0004_institution_contactinfo.py
apps/courses/: admin.py  apps.py  models.py
apps/courses/migrations/: 0001_initial.py  0002_alter_course_table_alter_coursedetail_table_and_more.py
apps/knowledgebase/: admin.py  apps.py  models.py
apps/knowledgebase/migrations/: 0001_initial.py
apps/leads/: admin.py  apps.py  models.py  services.py  validators.py
apps/leads/migrations/: 0001_initial.py  0002_lead_token.py
config/: asgi.py  embedding_config.py  llm_config.py  settings.py  urls.py
config/settings/: base.py  development.py  production.py
