[project]
name = "rag-crm"
version = "0.1.0"
description = ""
authors = [
    {name = "Faramarz",email = "faramarzmonfared@gmail.com"}
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pgvector (>=0.2.5,<0.4)",
    "langchain (>=1.3.11,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "langchain-postgres (>=0.0.17,<0.0.18)",
    "ollama (>=0.6.2,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
